src/test/deca/syntax/valid/HW/lex/simpleHWLex.deca
// Description:
//    Programme minimaliste utilisant print.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 06/01/2022

{
print
println
(
)
;
"Hi"
}
