src/test/deca/syntax/invalid/HW/closeBraceMissing.deca
// Description:
//    Programme minimaliste oubliant l'acollade fermante
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 06/01/2022
{
        print("Hello");
